--- a/y/yo/you/younglife.org.html
+++ b/y/yo/you/younglife.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the younglife.org privacy policy that was archived on 2016-12-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161221092158id_/https%3A//www.younglife.org/Pages/Legal/PrivacyPolicy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the younglife.org privacy policy that was archived on 2017-04-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170404194423id_/https%3A//www.younglife.org/Pages/Legal/PrivacyPolicy.aspx) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en-us" dir="ltr"><head>
     <!-- masterpage version - 8/31/16 4:20 PM  -->
@@ -182,7 +182,7 @@ document.write('<script type="text/javascript" src="/_layouts/blank.js?rev=QGOYA
                             '//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
                             })(window,document,'script','dataLayer','GTM-TKKHFF');</script><!-- End Google Tag Manager -->
 
-<form name="aspnetForm" method="post" action="/web/20161221092158id_/https%3A//www.younglife.org/Pages/Legal/PrivacyPolicy.aspx" id="aspnetForm">
+<form name="aspnetForm" method="post" action="/web/20170404194423id_/https%3A//www.younglife.org/Pages/Legal/PrivacyPolicy.aspx" id="aspnetForm">
 <input type="hidden" name="MSOWebPartPage_PostbackSource" id="MSOWebPartPage_PostbackSource" value="">
 <input type="hidden" name="MSOTlPn_SelectedWpId" id="MSOTlPn_SelectedWpId" value="">
 <input type="hidden" name="MSOTlPn_View" id="MSOTlPn_View" value="0">
@@ -190,7 +190,7 @@ document.write('<script type="text/javascript" src="/_layouts/blank.js?rev=QGOYA
 <input type="hidden" name="MSOGallery_SelectedLibrary" id="MSOGallery_SelectedLibrary" value="">
 <input type="hidden" name="MSOGallery_FilterString" id="MSOGallery_FilterString" value="">
 <input type="hidden" name="MSOTlPn_Button" id="MSOTlPn_Button" value="none">
-<input type="hidden" name="__REQUESTDIGEST" id="__REQUESTDIGEST" value="0x0CFC64A0C14ABA47C992808C4B85F8E61B26A8673A0932AB176DA4FCD33B3CCD04B86560436731ED5FEBD12DE1D8AD3EFE5D1E3FFACBACE19FD2B7C79275B51A,21 Dec 2016 09:21:59 -0000">
+<input type="hidden" name="__REQUESTDIGEST" id="__REQUESTDIGEST" value="0x1E1B89625454B9C30030E7651C8A8A715B0FA64936B5FB76FD8A15550498EDDDDE410C337A4D6E6E4A4CD8885B3B1F25E6DC028254C7ED6985BDC824A4F9D325,04 Apr 2017 19:44:23 -0000">
 <input type="hidden" name="MSOSPWebPartManager_DisplayModeName" id="MSOSPWebPartManager_DisplayModeName" value="Browse">
 <input type="hidden" name="MSOSPWebPartManager_ExitingDesignMode" id="MSOSPWebPartManager_ExitingDesignMode" value="false">
 <input type="hidden" name="MSOWebPartPage_Shared" id="MSOWebPartPage_Shared" value="">
@@ -208,11 +208,11 @@ document.write('<script type="text/javascript" src="/_layouts/blank.js?rev=QGOYA
 <script type="text/javascript">
 //<![CDATA[
 var MSOWebPartPageFormName = 'aspnetForm';
-function CallServer_21102680(arg, context) {WebForm_DoCallback('ctl00$ctl26',arg,SP.UI.MyLinksRibbon.MyLinksRibbonPageComponent.ribbonActionCallback,context,null,false); }function _myLinksRibbonLoad2()
+function CallServer_20119640(arg, context) {WebForm_DoCallback('ctl00$ctl26',arg,SP.UI.MyLinksRibbon.MyLinksRibbonPageComponent.ribbonActionCallback,context,null,false); }function _myLinksRibbonLoad2()
 {
     var fnd = function () {
         try {
-            mylinks_init.MyLinksInit('CallServer_21102680'); 
+            mylinks_init.MyLinksInit('CallServer_20119640'); 
         } 
         catch (Ex)
         { }
@@ -463,7 +463,7 @@ var g_commandUIHandlers = {"name":"CommandHandlers","attrs":{},"children":[]};
 	<div class="menu horizontal menu-horizontal">
 		<ul class="root static">
 			<li class="static selected"><a class="static selected menu-item" href="/" accesskey="1"><span class="additional-background"><span class="menu-item-text">Home</span><span class="ms-hidden">Currently selected</span></span></a></li><li class="static dynamic-children"><span class="static dynamic-children menu-item"><span class="additional-background"><span class="menu-item-text">About</span></span></span><ul class="dynamic">
-				<li class="dynamic"><a class="dynamic menu-item" href="/About/Pages/default.aspx"><span class="additional-background"><span class="menu-item-text">About Young Life</span></span></a></li><li class="dynamic"><a class="dynamic menu-item" href="/About/Pages/5Cs.aspx"><span class="additional-background"><span class="menu-item-text">Philosophies and Methods</span></span></a></li><li class="dynamic"><a class="dynamic menu-item" href="/About/Pages/MissionandVision.aspx"><span class="additional-background"><span class="menu-item-text">Mission and Vision</span></span></a></li><li class="dynamic"><a class="dynamic menu-item" href="/About/Pages/History.aspx"><span class="additional-background"><span class="menu-item-text">History</span></span></a></li><li class="dynamic"><a class="dynamic menu-item" href="/GetInvolved"><span class="additional-background"><span class="menu-item-text">Get Involved</span></span></a></li><li class="dynamic"><a class="dynamic menu-item" href="/About/Pages/YoungLifeLeadership.aspx"><span class="additional-background"><span class="menu-item-text">Young Life Leadership</span></span></a></li><li class="dynamic"><a class="dynamic menu-item" href="/Legacy/Pages/default.aspx"><span class="additional-background"><span class="menu-item-text">Legacy Program</span></span></a></li><li class="dynamic"><a class="dynamic menu-item" href="/About/Pages/FactsAtYourFingertips.aspx"><span class="additional-background"><span class="menu-item-text">Ministry Statistics</span></span></a></li><li class="dynamic"><a class="dynamic menu-item new-window" href="/Foundation/Pages/default.aspx" target="_blank"><span class="additional-background"><span class="menu-item-text">Young Life Foundation</span></span></a></li><li class="dynamic"><a class="dynamic menu-item" href="/Relationships/Pages/default.aspx"><span class="additional-background"><span class="menu-item-text">Relationships Magazine</span></span></a></li><li class="dynamic"><a class="dynamic menu-item" href="/About/Pages/KeepingKidsSafe.aspx"><span class="additional-background"><span class="menu-item-text">Keeping Kids Safe</span></span></a></li><li class="dynamic"><a class="dynamic menu-item" href="/RWOK"><span class="additional-background"><span class="menu-item-text">Reaching a World of Kids</span></span></a></li><li class="dynamic"><a class="dynamic menu-item" href="/About/Pages/Young-Life-General-FAQs.aspx"><span class="additional-background"><span class="menu-item-text">FAQs</span></span></a></li>
+				<li class="dynamic"><a class="dynamic menu-item" href="/About/Pages/default.aspx"><span class="additional-background"><span class="menu-item-text">About Young Life</span></span></a></li><li class="dynamic"><a class="dynamic menu-item" href="/About/Pages/5Cs.aspx"><span class="additional-background"><span class="menu-item-text">Philosophies and Methods</span></span></a></li><li class="dynamic"><a class="dynamic menu-item" href="/About/Pages/MissionandVision.aspx"><span class="additional-background"><span class="menu-item-text">Mission and Vision</span></span></a></li><li class="dynamic"><a class="dynamic menu-item" href="/About/Pages/History.aspx"><span class="additional-background"><span class="menu-item-text">History</span></span></a></li><li class="dynamic"><a class="dynamic menu-item" href="/GetInvolved"><span class="additional-background"><span class="menu-item-text">Get Involved</span></span></a></li><li class="dynamic"><a class="dynamic menu-item" href="/About/Pages/YoungLifeLeadership.aspx"><span class="additional-background"><span class="menu-item-text">Young Life Leadership</span></span></a></li><li class="dynamic"><a class="dynamic menu-item" href="/Legacy/Pages/default.aspx"><span class="additional-background"><span class="menu-item-text">Legacy Program</span></span></a></li><li class="dynamic"><a class="dynamic menu-item" href="/About/Pages/FactsAtYourFingertips.aspx"><span class="additional-background"><span class="menu-item-text">Ministry Statistics</span></span></a></li><li class="dynamic"><a class="dynamic menu-item" href="/About/Pages/Financial-Integrity.aspx"><span class="additional-background"><span class="menu-item-text">Financial Integrity</span></span></a></li><li class="dynamic"><a class="dynamic menu-item new-window" href="/Foundation/Pages/default.aspx" target="_blank"><span class="additional-background"><span class="menu-item-text">Young Life Foundation</span></span></a></li><li class="dynamic"><a class="dynamic menu-item" href="/Relationships/Pages/default.aspx"><span class="additional-background"><span class="menu-item-text">Relationships Magazine</span></span></a></li><li class="dynamic"><a class="dynamic menu-item" href="/About/Pages/KeepingKidsSafe.aspx"><span class="additional-background"><span class="menu-item-text">Keeping Kids Safe</span></span></a></li><li class="dynamic"><a class="dynamic menu-item" href="/forward"><span class="additional-background"><span class="menu-item-text">Forward</span></span></a></li><li class="dynamic"><a class="dynamic menu-item" href="/About/Pages/Young-Life-General-FAQs.aspx"><span class="additional-background"><span class="menu-item-text">FAQs</span></span></a></li>
 			</ul></li><li class="static dynamic-children"><span class="static dynamic-children menu-item"><span class="additional-background"><span class="menu-item-text">Find</span></span></span><ul class="dynamic">
 				<li class="dynamic"><a class="dynamic menu-item" href="/Locator/Pages/default.aspx"><span class="additional-background"><span class="menu-item-text">Young Life Near You</span></span></a></li><li class="dynamic"><a class="dynamic menu-item" href="/Locator/Pages/default.aspx?SearchBy=Properties"><span class="additional-background"><span class="menu-item-text">A Young Life Camp</span></span></a></li><li class="dynamic"><a class="dynamic menu-item" href="/Jobs/Pages/default.aspx"><span class="additional-background"><span class="menu-item-text">Jobs with Young Life</span></span></a></li><li class="dynamic"><a class="dynamic menu-item" href="/Events/Pages/default.aspx"><span class="additional-background"><span class="menu-item-text">Young Life Events</span></span></a></li>
 			</ul></li><li class="static dynamic-children"><span class="static dynamic-children menu-item"><span class="additional-background"><span class="menu-item-text">For Every Kid</span></span></span><ul class="dynamic">
@@ -652,7 +652,7 @@ var g_commandUIHandlers = {"name":"CommandHandlers","attrs":{},"children":[]};
                     <div class="Column">
                         <h2>Resources</h2>
 
-                        <ul class="LinkList"><li><a href="https://staff.younglife.org">Staff, Leader and Committee Resources</a></li><li><a href="https://www.younglife.org/Foundation/">Young Life Foundation</a></li><li><a href="https://www.younglife.org/RWOK/Pages/default.aspx">Reaching a World of Kids</a></li><li><a href="https://www.younglife.org/PressRoom/">Press Room</a></li></ul>
+                        <ul class="LinkList"><li><a href="https://staff.younglife.org">Staff, Leader and Committee Resources</a></li><li><a href="https://www.younglife.org/Foundation/">Young Life Foundation</a></li><li><a href="https://www.younglife.org/Forward">Forward</a></li><li><a href="https://www.younglife.org/PressRoom/">Press Room</a></li></ul>
                     </div>
                     <div class="Column">
                         <h2>Additional Links</h2>
@@ -686,7 +686,7 @@ var g_commandUIHandlers = {"name":"CommandHandlers","attrs":{},"children":[]};
                         <span class="FooterRegistered">®</span>
                     </div>
                     <div class="FooterLegal noindex">
-                        © 2004-2016
+                        © 2004-2017
                         Young Life. 
                         All rights reserved
                     </div>
