--- a/m/md/mdd/mddhosting.com.html
+++ b/m/md/mdd/mddhosting.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the mddhosting.com privacy policy that was archived on 2016-09-14.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20160914034607id_/https%3A//www.mddhosting.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the mddhosting.com privacy policy that was archived on 2017-04-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170405060300id_/https%3A//www.mddhosting.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
 <meta charset="utf-8">
@@ -148,8 +148,15 @@ US <strong>1-866-758-4678</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; International <
  
 <div class="footer">
 <div class="footBody">
-<div class="footLogo"><p>© 2006 - 2016 MDDHosting, LLC</p>
-<div class="fb-like" data-href="https://www.mddhosting.com/" data-layout="button" data-action="like" data-show-faces="true" data-share="true" style="margin: 10px 0 0 65px;"></div>
+<div class="footLogo"><p>© 2006 - 2017 MDDHosting, LLC</p>
+<p></p><div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.6&appId=159726037387450";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script><p></p>
 </div>
 <div class="footLink">
 <div class="mod">
@@ -157,7 +164,6 @@ US <strong>1-866-758-4678</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; International <
 <a href="https://www.mddhosting.com/index.php">Home</a>
 <a href="https://www.mddhosting.com/company.php">About Us</a>
 <a href="https://www.mddhosting.com/support/">Support and Billing</a>
-<a href="http://blog.mddhosting.com/" target="_blank">Webmaster's Blog</a>
 <a href="http://forums.mddhosting.com/">Community Forums</a>
 <a href="https://www.mddhosting.com/affiliates.php">Affiliates</a>
 </div>
@@ -167,7 +173,7 @@ US <strong>1-866-758-4678</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; International <
 <a href="https://www.mddhosting.com/premium.php">Premium Hosting</a>
 <a href="https://www.mddhosting.com/reseller.php">Reseller Hosting</a>
 <a href="https://www.mddhosting.com/vps.php">Virtual Private Servers</a>
- 
+<a href="https://www.mddhosting.com/dedicated.php">Dedicated Servers</a>
 </div>
 <div class="mod">
 <strong>Legal</strong>
