--- a/m/ma/mac/macxdvd.com.html
+++ b/m/ma/mac/macxdvd.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the macxdvd.com privacy policy that was archived on 2016-07-24.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20160724074310id_/https%3A//www.macxdvd.com/company/privacy-policy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the macxdvd.com privacy policy that was archived on 2017-04-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170405060443id_/https%3A//www.macxdvd.com/company/privacy-policy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -210,7 +210,7 @@
 	<p>I had the problem of converting some format. E-mail:<a href="mailto:support@macxdvd.com">support@macxdvd.com</a></p>
 	<div id="footline">
 		<p><a href="/">Home</a> | <a href="/company/about-digiarty-software.htm">About</a> | <a href="/sitemap.htm">Site Map</a> | <a href="/company/privacy-policy.htm">Privacy Policy</a> | <a href="/company/terms-and-conditions.htm">Terms and Conditions</a> | <a href="/company/end-user-license-agreement.htm">License Agreement</a> | <a href="/company/partners.htm">Affiliate</a> | <a href="/press-room/">News</a> | <a href="/company/contact-us.htm">Contact Us</a></p>
-		<p>Copyright © 2016 Digiarty Software, Inc. All rights reserved.</p>
+		<p>Copyright © 2017 Digiarty Software, Inc. All rights reserved</p>
 	</div>
 </div>
 <img src="/image/menu-bg.jpg" height="1" width="1" border="0">
