--- a/x/xi/xil/xilfyvideos.com.html
+++ b/x/xi/xil/xilfyvideos.com.html
@@ -1,7 +1,9 @@
-<!--The following is the downloaded HTML source of the xilfyvideos.com privacy policy that was archived on 2016-12-04.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161204015456id_/http%3A//xilfyvideos.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the xilfyvideos.com privacy policy that was archived on 2017-04-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170405085101id_/http%3A//xilfyvideos.com/privacy-policy) for the most accurate reproduction.-->
 
-<!DOCTYPE html><html lang="en" prefix="og: http://ogp.me/ns#"><head><meta name="msvalidate.01" content="8A1FC9F5FFEE9960D5CC77C54C9B22D9">
+<html lang="en" prefix="og: http://ogp.me/ns#"><head></head><body class="skin-metro">Minhaj
+
+<meta name="msvalidate.01" content="8A1FC9F5FFEE9960D5CC77C54C9B22D9">
     <meta charset="utf-8">
     <title>Privacy Policy-XilfyVideos.com</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -15,8 +17,8 @@
     <link href="http://xilfyvideos.com/css/responsive.css" rel="stylesheet" type="text/css" media="all">
     <link rel="stylesheet" type="text/css" href="http://xilfyvideos.com/css/notification.css">
     <script async="" src="https://www.google-analytics.com/analytics.js"></script><script id="facebook-jssdk" src="//connect.facebook.net/en_US/sdk.js#xfbml=1&amp;version=v2.5&amp;appId=1669351546656797"></script><script type="text/javascript">var site_url='http://xilfyvideos.com'</script>
-</head>
-<body class="skin-metro">
+
+
 <div id="fb-root"></div>
     <script>(function(d, s, id) {
             var js, fjs = d.getElementsByTagName(s)[0];
@@ -103,7 +105,7 @@
     <div class="col-md-7">
         <div class="footer_menu">
             <ul class="footer_top"><li><a href="http://xilfyvideos.com">Home</a></li><li><a href="http://xilfyvideos.com/about-us">About</a></li><li><a href="http://xilfyvideos.com/contact-us">Contact</a></li></ul>
-            <ul class="footer_bottom"><li><a href="http://xilfyvideos.com/terms-and-conditions">Terms &amp; Condition</a></li><li><a href="http://xilfyvideos.com/privacy-policy">Privacy Policy</a></li><li><span class="copyright">© 2016 Xilfy.com</span></li></ul>
+            <ul class="footer_bottom"><li><a href="http://xilfyvideos.com/terms-and-conditions">Terms &amp; Condition</a></li><li><a href="http://xilfyvideos.com/privacy-policy">Privacy Policy</a></li><li><span class="copyright">© 2017 Xilfy.com</span></li></ul>
         </div>
     </div>
     <div class="col-md-5">
