--- a/i/it/iti/itison.com.html
+++ b/i/it/iti/itison.com.html
@@ -1,17 +1,16 @@
-<!--The following is the downloaded HTML source of the itison.com privacy policy that was archived on 2016-12-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161223144210id_/https%3A//www.itison.com/pages/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the itison.com privacy policy that was archived on 2017-04-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170406071119id_/https%3A//www.itison.com/pages/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html class="no-js" lang="en" xmlns:fb="http://ogp.me/ns/fb#"><!--<![endif]--><head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# www-itison-com: http://ogp.me/ns/apps/www-itison-com#">
 		<meta charset="utf-8">
-    <!-- Generated at 2016-12-23 14:42:11 +0000 by prod-peru-armadillo -->
+    <!-- Generated at 2017-04-06 08:11:20 +0100 by prod-peru-armadillo -->
     <!-- 5a5ed1d3eb89990d774dbdd1e13ad78a-c9cc6eb7105447d2e1a9e7d9f27383bf -->
 
-    
     <meta http-equiv="Content-Language" content="en-gb">
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-<script type="text/javascript" async="" src="//d1l6p2sc9645hc.cloudfront.net/tracker.js"></script><script src="https://js-agent.newrelic.com/nr-998.min.js"></script><script async="" src="https://connect.facebook.net/en_US/fbevents.js"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript">window.NREUM||(NREUM={});NREUM.info={"beacon":"bam.nr-data.net","errorBeacon":"bam.nr-data.net","licenseKey":"605b43bf03","applicationID":"18042031","transactionName":"ew1YR0oJXg9UERoWRU9NRlJfA0FMQRFcF1NbGw==","queueTime":0,"applicationTime":51,"agent":""}</script>
-<script type="text/javascript">window.NREUM||(NREUM={}),__nr_require=function(e,t,n){function r(n){if(!t[n]){var o=t[n]={exports:{}};e[n][0].call(o.exports,function(t){var o=e[n][1][t];return r(o||t)},o,o.exports)}return t[n].exports}if("function"==typeof __nr_require)return __nr_require;for(var o=0;o<n.length;o++)r(n[o]);return r}({1:[function(e,t,n){function r(){}function o(e,t,n){return function(){return i(e,[(new Date).getTime()].concat(u(arguments)),t?null:this,n),t?void 0:this}}var i=e("handle"),a=e(2),u=e(3),c=e("ee").get("tracer"),f=NREUM;"undefined"==typeof window.newrelic&&(newrelic=f);var s=["setPageViewName","setCustomAttribute","setErrorHandler","finished","addToTrace","inlineHit"],l="api-",p=l+"ixn-";a(s,function(e,t){f[t]=o(l+t,!0,"api")}),f.addPageAction=o(l+"addPageAction",!0),f.setCurrentRouteName=o(l+"routeName",!0),t.exports=newrelic,f.interaction=function(){return(new r).get()};var d=r.prototype={createTracer:function(e,t){var n={},r=this,o="function"==typeof t;return i(p+"tracer",[Date.now(),e,n],r),function(){if(c.emit((o?"":"no-")+"fn-start",[Date.now(),r,o],n),o)try{return t.apply(this,arguments)}finally{c.emit("fn-end",[Date.now()],n)}}}};a("setName,setAttribute,save,ignore,onEnd,getContext,end,get".split(","),function(e,t){d[t]=o(p+t)}),newrelic.noticeError=function(e){"string"==typeof e&&(e=new Error(e)),i("err",[e,(new Date).getTime()])}},{}],2:[function(e,t,n){function r(e,t){var n=[],r="",i=0;for(r in e)o.call(e,r)&&(n[i]=t(r,e[r]),i+=1);return n}var o=Object.prototype.hasOwnProperty;t.exports=r},{}],3:[function(e,t,n){function r(e,t,n){t||(t=0),"undefined"==typeof n&&(n=e?e.length:0);for(var r=-1,o=n-t||0,i=Array(o<0?0:o);++r<o;)i[r]=e[t+r];return i}t.exports=r},{}],ee:[function(e,t,n){function r(){}function o(e){function t(e){return e&&e instanceof r?e:e?c(e,u,i):i()}function n(n,r,o){if(!p.aborted){e&&e(n,r,o);for(var i=t(o),a=v(n),u=a.length,c=0;c<u;c++)a[c].apply(i,r);var f=s[w[n]];return f&&f.push([y,n,r,i]),i}}function d(e,t){b[e]=v(e).concat(t)}function v(e){return b[e]||[]}function g(e){return l[e]=l[e]||o(n)}function m(e,t){f(e,function(e,n){t=t||"feature",w[n]=t,t in s||(s[t]=[])})}var b={},w={},y={on:d,emit:n,get:g,listeners:v,context:t,buffer:m,abort:a,aborted:!1};return y}function i(){return new r}function a(){(s.api||s.feature)&&(p.aborted=!0,s=p.backlog={})}var u="nr@context",c=e("gos"),f=e(2),s={},l={},p=t.exports=o();p.backlog=s},{}],gos:[function(e,t,n){function r(e,t,n){if(o.call(e,t))return e[t];var r=n();if(Object.defineProperty&&Object.keys)try{return Object.defineProperty(e,t,{value:r,writable:!0,enumerable:!1}),r}catch(i){}return e[t]=r,r}var o=Object.prototype.hasOwnProperty;t.exports=r},{}],handle:[function(e,t,n){function r(e,t,n,r){o.buffer([e],r),o.emit(e,t,n)}var o=e("ee").get("handle");t.exports=r,r.ee=o},{}],id:[function(e,t,n){function r(e){var t=typeof e;return!e||"object"!==t&&"function"!==t?-1:e===window?0:a(e,i,function(){return o++})}var o=1,i="nr@id",a=e("gos");t.exports=r},{}],loader:[function(e,t,n){function r(){if(!h++){var e=y.info=NREUM.info,t=l.getElementsByTagName("script")[0];if(setTimeout(f.abort,3e4),!(e&&e.licenseKey&&e.applicationID&&t))return f.abort();c(b,function(t,n){e[t]||(e[t]=n)}),u("mark",["onload",a()],null,"api");var n=l.createElement("script");n.src="https://"+e.agent,t.parentNode.insertBefore(n,t)}}function o(){"complete"===l.readyState&&i()}function i(){u("mark",["domContent",a()],null,"api")}function a(){return(new Date).getTime()}var u=e("handle"),c=e(2),f=e("ee"),s=window,l=s.document,p="addEventListener",d="attachEvent",v=s.XMLHttpRequest,g=v&&v.prototype;NREUM.o={ST:setTimeout,CT:clearTimeout,XHR:v,REQ:s.Request,EV:s.Event,PR:s.Promise,MO:s.MutationObserver},e(1);var m=""+location,b={beacon:"bam.nr-data.net",errorBeacon:"bam.nr-data.net",agent:"js-agent.newrelic.com/nr-998.min.js"},w=v&&g&&g[p]&&!/CriOS/.test(navigator.userAgent),y=t.exports={offset:a(),origin:m,features:{},xhrWrappable:w};l[p]?(l[p]("DOMContentLoaded",i,!1),s[p]("load",r,!1)):(l[d]("onreadystatechange",o),s[d]("onload",r)),u("mark",["firstbyte",a()],null,"api");var h=0},{}]},{},["loader"]);</script>
+<script type="text/javascript" async="" src="//d1l6p2sc9645hc.cloudfront.net/tracker.js"></script><script src="https://js-agent.newrelic.com/nr-1026.min.js"></script><script async="" src="https://connect.facebook.net/en_US/fbevents.js"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript">window.NREUM||(NREUM={});NREUM.info={"beacon":"bam.nr-data.net","errorBeacon":"bam.nr-data.net","licenseKey":"605b43bf03","applicationID":"18042031","transactionName":"ew1YR0oJXg9UERoWRU9NRlJfA0FMQRFcF1NbGw==","queueTime":0,"applicationTime":38,"agent":""}</script>
+<script type="text/javascript">window.NREUM||(NREUM={}),__nr_require=function(e,n,t){function r(t){if(!n[t]){var o=n[t]={exports:{}};e[t][0].call(o.exports,function(n){var o=e[t][1][n];return r(o||n)},o,o.exports)}return n[t].exports}if("function"==typeof __nr_require)return __nr_require;for(var o=0;o<t.length;o++)r(t[o]);return r}({1:[function(e,n,t){function r(){}function o(e,n,t){return function(){return i(e,[c.now()].concat(u(arguments)),n?null:this,t),n?void 0:this}}var i=e("handle"),a=e(2),u=e(3),f=e("ee").get("tracer"),c=e("loader"),s=NREUM;"undefined"==typeof window.newrelic&&(newrelic=s);var p=["setPageViewName","setCustomAttribute","setErrorHandler","finished","addToTrace","inlineHit","addRelease"],d="api-",l=d+"ixn-";a(p,function(e,n){s[n]=o(d+n,!0,"api")}),s.addPageAction=o(d+"addPageAction",!0),s.setCurrentRouteName=o(d+"routeName",!0),n.exports=newrelic,s.interaction=function(){return(new r).get()};var m=r.prototype={createTracer:function(e,n){var t={},r=this,o="function"==typeof n;return i(l+"tracer",[c.now(),e,t],r),function(){if(f.emit((o?"":"no-")+"fn-start",[c.now(),r,o],t),o)try{return n.apply(this,arguments)}finally{f.emit("fn-end",[c.now()],t)}}}};a("setName,setAttribute,save,ignore,onEnd,getContext,end,get".split(","),function(e,n){m[n]=o(l+n)}),newrelic.noticeError=function(e){"string"==typeof e&&(e=new Error(e)),i("err",[e,c.now()])}},{}],2:[function(e,n,t){function r(e,n){var t=[],r="",i=0;for(r in e)o.call(e,r)&&(t[i]=n(r,e[r]),i+=1);return t}var o=Object.prototype.hasOwnProperty;n.exports=r},{}],3:[function(e,n,t){function r(e,n,t){n||(n=0),"undefined"==typeof t&&(t=e?e.length:0);for(var r=-1,o=t-n||0,i=Array(o<0?0:o);++r<o;)i[r]=e[n+r];return i}n.exports=r},{}],4:[function(e,n,t){n.exports={exists:"undefined"!=typeof window.performance&&window.performance.timing&&"undefined"!=typeof window.performance.timing.navigationStart}},{}],ee:[function(e,n,t){function r(){}function o(e){function n(e){return e&&e instanceof r?e:e?f(e,u,i):i()}function t(t,r,o,i){if(!d.aborted||i){e&&e(t,r,o);for(var a=n(o),u=m(t),f=u.length,c=0;c<f;c++)u[c].apply(a,r);var p=s[y[t]];return p&&p.push([b,t,r,a]),a}}function l(e,n){v[e]=m(e).concat(n)}function m(e){return v[e]||[]}function w(e){return p[e]=p[e]||o(t)}function g(e,n){c(e,function(e,t){n=n||"feature",y[t]=n,n in s||(s[n]=[])})}var v={},y={},b={on:l,emit:t,get:w,listeners:m,context:n,buffer:g,abort:a,aborted:!1};return b}function i(){return new r}function a(){(s.api||s.feature)&&(d.aborted=!0,s=d.backlog={})}var u="nr@context",f=e("gos"),c=e(2),s={},p={},d=n.exports=o();d.backlog=s},{}],gos:[function(e,n,t){function r(e,n,t){if(o.call(e,n))return e[n];var r=t();if(Object.defineProperty&&Object.keys)try{return Object.defineProperty(e,n,{value:r,writable:!0,enumerable:!1}),r}catch(i){}return e[n]=r,r}var o=Object.prototype.hasOwnProperty;n.exports=r},{}],handle:[function(e,n,t){function r(e,n,t,r){o.buffer([e],r),o.emit(e,n,t)}var o=e("ee").get("handle");n.exports=r,r.ee=o},{}],id:[function(e,n,t){function r(e){var n=typeof e;return!e||"object"!==n&&"function"!==n?-1:e===window?0:a(e,i,function(){return o++})}var o=1,i="nr@id",a=e("gos");n.exports=r},{}],loader:[function(e,n,t){function r(){if(!x++){var e=h.info=NREUM.info,n=d.getElementsByTagName("script")[0];if(setTimeout(s.abort,3e4),!(e&&e.licenseKey&&e.applicationID&&n))return s.abort();c(y,function(n,t){e[n]||(e[n]=t)}),f("mark",["onload",a()+h.offset],null,"api");var t=d.createElement("script");t.src="https://"+e.agent,n.parentNode.insertBefore(t,n)}}function o(){"complete"===d.readyState&&i()}function i(){f("mark",["domContent",a()+h.offset],null,"api")}function a(){return E.exists&&performance.now?Math.round(performance.now()):(u=Math.max((new Date).getTime(),u))-h.offset}var u=(new Date).getTime(),f=e("handle"),c=e(2),s=e("ee"),p=window,d=p.document,l="addEventListener",m="attachEvent",w=p.XMLHttpRequest,g=w&&w.prototype;NREUM.o={ST:setTimeout,CT:clearTimeout,XHR:w,REQ:p.Request,EV:p.Event,PR:p.Promise,MO:p.MutationObserver};var v=""+location,y={beacon:"bam.nr-data.net",errorBeacon:"bam.nr-data.net",agent:"js-agent.newrelic.com/nr-1026.min.js"},b=w&&g&&g[l]&&!/CriOS/.test(navigator.userAgent),h=n.exports={offset:u,now:a,origin:v,features:{},xhrWrappable:b};e(1),d[l]?(d[l]("DOMContentLoaded",i,!1),p[l]("load",r,!1)):(d[m]("onreadystatechange",o),p[m]("onload",r)),f("mark",["firstbyte",u],null,"api");var x=0,E=e(4)},{}]},{},["loader"]);</script>
 
     <title>Privacy – itison</title>
     <meta name="description" content="Daily deals with at least 50% off and great events in your city.">
@@ -50,20 +49,20 @@
 		<!-- For non-Retina iPhone, iPod Touch, and Android 2.1+ devices: -->
 		<link rel="apple-touch-icon-precomposed" href="https://d1fva8h5kevlby.cloudfront.net/assets/apple/apple-touch-icon-precomposed-30554ed49b7c3548a541c015ecbfb268d878662a7e9938330976659b6a25e8aa.png">
 
-      <link rel="stylesheet" media="screen" href="https://d1fva8h5kevlby.cloudfront.net/assets/www/application-a8c2007d43e52544b580cf19c26f130f42697cd64b825d4a2112425095149eec.css">
+      <link rel="stylesheet" media="screen" href="https://d1fva8h5kevlby.cloudfront.net/assets/www/application-224535e98fb456433c8b96bff05c192a58332666c616075bcf4cce259d0d6379.css">
 
 		
 
     <script type="text/javascript" src="//use.typekit.net/npc6ixj.js"></script>
      <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 
-    <script src="https://du0ngfyc2n7yn.cloudfront.net/assets/modernizr-a2be2531e56923c97d5cab7ede5b6581add182165089051f5066173a404b7225.js"></script>
+    <script src="https://d1fva8h5kevlby.cloudfront.net/assets/modernizr-f59224fbca756d8a930e7f38189b0b45c97568d664f018cac459755cb5b4f444.js"></script>
 
 		<!--[if (gte IE 6)&(lte IE 8)]>
 			<script src="https://du0ngfyc2n7yn.cloudfront.net/assets/selectivizr-min-a068c49904f6b918ab64375c85433e30d07cb2e9f741e590eee18b7e569d9a3e.js"></script>
 		<![endif]-->
     <meta name="csrf-param" content="authenticity_token">
-<meta name="csrf-token" content="tMWkEo8SlLppSBeiGI7yswdkZgfZO9KP4b9RIsV1VBR8u7Oecd7pb0qCR8+WEx/XfzsNwuDPg4/mB0d1faPC7w==">
+<meta name="csrf-token" content="f03wHkjP4WJv8YDX1sxfbO5kXooilTgHG5edsuR3Duc1Jja3vFcsxc5FUlcSJjQCJEzfD8VsXw3oxPvz0s4SyQ==">
 	<script async="true" type="text/javascript" src="https://s.adroll.com/j/roundtrip.js"></script></head>
 
 
@@ -186,11 +185,15 @@
 </header>
 
 
+    <div class="header-fix-wrapper">
+      <div class="header-fix category-nav-header-fix" id="fixed-category-nav-container" data-snap-ignore="true"></div>
+    </div>
+
 		<div class="header-fix-wrapper">
-			<div class="header-fix product-header-fix" id="product-header-fix" data-snap-ignore="true"></div>
+			<div class="header-fix product-header-fix" id="product-header-min-container" data-snap-ignore="true"></div>
 		</div>
 
-		<div class="snap-content scrollable with-footer" id="content" data-snap-ignore="true">
+		<div class="snap-content scrollable with-footer without-fixed-nav" id="content" data-snap-ignore="true">
 			<div class="outer-grid">
 
 	<h1 class="page-title">Privacy &amp; cookies</h1>
@@ -289,7 +292,7 @@
 
 			<h3>Get in touch</h3>
 
-			<p>itison is operated and managed by itison Ltd., Argyll Chambers, 30 Buchanan Street, Glasgow, G1 3LB, United Kingdom</p>
+			<p>itison is operated and managed by itison Ltd., 29 Cochrane Street, Glasgow, G1 1HL.</p>
 
 			<p>If you have any queries concerning your personal information or any questions on our use of the information, please contact <a href="mailto:support@itison.com">support@itison.com</a> or call 0141 223 8843.</p>
 
@@ -387,7 +390,7 @@ src="https://www.facebook.com/tr?id=490548601097365&ev=PageView&noscript=1"
 
 
 
-  <script src="https://d1fva8h5kevlby.cloudfront.net/assets/application-23c3cae1e178fb18984fee57370de92d23c9d5648d9e7ead8d9c71f13bd1cfb9.js"></script>
+  <script src="https://du0ngfyc2n7yn.cloudfront.net/assets/application-a79bc70c28493cc8ddc6a3975582dbc6251b85ae5b243d5e933aa35110a4de19.js"></script>
 
 <script>
 //<![CDATA[
@@ -426,7 +429,7 @@ src="https://www.facebook.com/tr?id=490548601097365&ev=PageView&noscript=1"
 
     var el;
 
-    $("select")
+    jQuery("select")
       .each(function() {
         el = $(this);
         el.data("origWidth", el.outerWidth()) // IE 8 can haz padding
@@ -453,8 +456,8 @@ src="https://www.facebook.com/tr?id=490548601097365&ev=PageView&noscript=1"
 <script>
 //<![CDATA[
 
-  if (typeof $.scrollDepth !== "undefined") {
-    $.scrollDepth();
+  if (typeof jQuery.scrollDepth !== "undefined") {
+    jQuery.scrollDepth();
   }
 
 //]]>
